--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/style.css" media="screen" type="text/css"/>
 </head>
 <body>
+<img src="img/icon.jpg" style="height: 0"/>
+
 <div class="velas">
     <div class="fuego"></div>
     <div class="fuego"></div>
