--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no"/>
-    <title>Happy Birthday</title>
+    <title>wuli卓玥生日快乐！</title>
     <link rel="stylesheet" href="css/style.css" media="screen" type="text/css"/>
 </head>
 <body>
@@ -167,10 +167,7 @@
 <div class="text">
     <h1>Happy birthday!</h1>
 
-    <p>这边输名字，最好是英文</p>
-    <br/>
-
-    <p>要改什么跟我说</p>
+    <p>Of all the gin joints in all the towns in all the world<br>you walked into mine.<br><br>thanks</p>
 </div>
 </body>
 </html>
